# weather-webapp-demo

./: .gitignore  Cargo.toml  README.md
src/: main.rs
templates/: index.hbs
