[package]
name = "weatherapp"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
openweathermap = "0.2"
handlebars = "4"
tokio = { version = "1", features = ["full"] }
axum = "0.2"
# metriki-core = { path = "../metriki/metriki-core" }
# metriki-tower = { path = "../metriki/metriki-tower", features = ["http"] }
# metriki-log-reporter = { path = "../metriki/metriki-log-reporter" }
metriki-core = "1"
metriki-tower = { version = "0.2", features = ["http"] }
metriki-log-reporter = "0.1"
metriki-influxdb-reporter = "0.2"
hyper = { version = "0.14", features = ["server"]}
serde_json = "1"
env_logger = "0.5"
